<resources>
    <string name="app_name">diplomchik</string>
    <string name="app_in_bottom">Войдите в свой аккаунт</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="number">Номер телефона</string>
    <string name="selection">Выберите тему:</string>
    <string name="button_two">Тема 1
        \nПроцессы тестирования ПО</string>
    <string name="button_three">Тема 2 \nТестирование документации</string>
    <string name="button_four">Тема 3\nВиды тестирования</string>
    <string name="button_five">Тема 4\nЧек-листы</string>
    <string name="button_six">Тема 5\nТест-кейсы</string>
    <string name="button_seven">Тема 6\nОтчёты о дефектах</string>
    <string name="button_eight">Тема 7\nПланирование и отчётность</string>
    <string name="temaOneZagolovok">Процессы тестирования и разработки ПО</string>
    <string name="tema1text1">\tЧтобы лучше разобраться в том, как тестирование соотносится с программированием
        и иными видами проектной деятельности, для начала рассмотрим самые основы — модели разработки ПО.  При этом сразу подчеркнём,
        что разработка ПО является лишь частью жизненного цикла ПО, и здесь мы говорим именно о разработке.
    Материал данной главы относится скорее к дисциплине «управление проектами», потому здесь
        рассмотрен крайне сжато: пожалуйста, не воспринимайте его как исчерпывающее руководство — здесь едва ли рассмотрена
        и сотая доля процента соответствующей предметной области.</string>
    <string name="gold"> \t\tМодель разработки ПО — \n\tструктура,
        систематизирующая \n\tразличные виды проектной \n\tдеятельности, их взаимодействие \n\tи последовательность в процессе \n\tразработки ПО. </string>
    <string name="tema1text1part2"> \tВыбор модели разработки ПО серьёзно
        влияет на процесс тестирования, определяя выбор стратегии, расписание, необходимые ресурсы и т.д. Моделей разработки ПО много,
        но в общем случае классическими можно считать водопадную, v-образную, итерационную инкрементальную, спиральную и гибкую. \n\tЗнать и понимать
        модели разработки ПО необходимо затем, чтобы уже с первых дней работы понимать, что происходит вокруг, что, зачем и почему вы делаете. Многие начинающие тестировщики отмечают,
        что ощущение бессмысленности происходящего посещает их, даже если текущие задания интересны. Чем полнее вы будете представлять картину происходящего на проекте,
        тем яснее вам будет виден ваш собственный вклад в общее дело и смысл того, чем вы занимаетесь.</string>
    <string name="temaOneZagolovok2">Водопадная модель</string>
    <string name="tema1text2">\tВодопадная модель (waterfall model19) сейчас представляет скорее исторический интерес, т. к. в современных проектах практически неприменима.
        Она предполагает однократное выполнение каждой из фаз проекта, которые, в свою очередь, строго следуют друг за другом. Очень упрощённо можно сказать,
        что в рамках этой модели в любой момент времени команде «видна» лишь предыдущая и следующая фаза. В реальной же разработке ПО приходится
        «видеть весь проект целиком» и возвращаться к предыдущим фазам, чтобы исправить недоработки или что-то уточнить.

        </string>
    <string name="temaOneZagolovok3">V-образная модель</string>
    <string name="tema1text3">\tV-образная модель (V-model22) является логическим развитием водопадной. Можно заметить, что в общем случае как водопадная,
        так и v-образная модели жизненного цикла ПО могут содержать один и тот же набор стадий, но принципиальное отличие заключается в том,
        как эта информация используется в процессе реализации проекта. Очень упрощённо можно сказать, что при использовании v-образной модели
        на каждой стадии «на спуске» нужно думать о том, что и как будет происходить на соответствующей стадии «на подъёме». Тестирование здесь
        появляется уже на самых ранних стадиях развития проекта, что позволяет минимизировать риски,
        а также обнаружить и устранить множество потенциальных проблем до того, как они станут проблемами реальными. V-образная модель разработки ПО представлена ниже.
</string>
    <string name="temaOneZagolovok4">Итерационная инкрементальная модель </string>
    <string name="tema1text4">\tИтерационная инкрементальная модель является фундаментальной основой современного подхода к разработке ПО. Как следует из названия модели, ей свойственна определённая двойственность (а ISTQB-глоссарий даже не приводит единого определения, разбивая его на отдельные части):
        \n\t• с точки зрения жизненного цикла модель является итерационной, т.к. подразумевает многократное повторение одних и тех же стадий; \n\t• с точки зрения развития продукта (приращения его полезных функций) модель является инкрементальной. \n\tКлючевой особенностью данной модели является разбиение проекта на относительно небольшие промежутки (итерации), каждый из которых в общем случае может включать в себя все классические стадии, присущие водопадной и v-образной моделям (рисунок 2.1.c). Итогом итерации является приращение (инкремент) функциональности продукта, выраженное в промежуточном билде.
</string>
    <string name="temaOneZagolovok5">Спиральная модель</string>
    <string name="tema1text5">\tСпиральная модель представляет собой частный случай итерационной инкрементальной модели, в котором особое внимание уделяется управлению рисками, в особенности влияющими на организацию процесса разработки проекта и контрольные точки. \tВ спиральной модели ярко выражены четыре ключевые фазы: \n\t• проработка целей, альтернатив и ограничений; \n\t• анализ рисков и прототипирование; \n\t• разработка (промежуточной версии) продукта; \n\t• планирование следующего цикла. \n\tС точки зрения тестирования и управления качеством повышенное внимание рискам является ощутимым преимуществом при использовании спиральной модели для разработки концептуальных проектов, в которых требования естественным образом являются сложными и нестабильными (могут многократно меняться по ходу выполнения проекта).

</string>
    <string name="temaOneZagolovok6">Гибкая модель</string>
    <string name="tema1text6">\tГибкая модель представляет собой совокупность различных подходов к разработке ПО и базируется на т. н. «agile-манифесте»: \n\t• Люди и взаимодействие важнее процессов и инструментов. \n\t• Работающий продукт важнее исчерпывающей документации. \n\t• Сотрудничество с заказчиком важнее согласования условий контракта. \n\t• Готовность к изменениям важнее следования первоначальному плану. \n\tКак несложно догадаться, положенные в основу гибкой модели подходы являются логическим развитием и продолжением всего того, что было за десятилетия создано и опробовано в водопадной, v-образной, итерационной инкрементальной, спиральной и иных моделях. Причём здесь впервые был достигнут ощутимый результат в снижении бюрократической составляющей и максимальной адаптации процесса разработки ПО к мгновенным изменениям рынка и требований заказчика. Главным недостатком гибкой модели считается сложность её применения к крупным проектам, а также частое ошибочное внедрение её подходов, вызванное недопониманием фундаментальных принципов модели.
</string>
    <string name="temaOneZagolovok7">Таблица сравнения моделей разработки ПО</string>
    <string name="temaTwoZagolovok1">Тестирование документации и требований</string>
    <string name="tema2text1">\tКак мы только что рассмотрели в главе, посвящённой жизненному циклу тестирования, всё так или иначе начинается с документации и требований.
</string>
    <string name="tema2text2">\tБрайан Хэнкс, описывая важность требований, подчёркивает, что они:</string>
    <string name="afterblue1">\t Продуктная документация используется проектной командой во время разработки и поддержки продукта. Она включает:
 \n\t• План проекта и в том числе тестовый план.
 \n\t• Требования к программному продукту и функциональные спецификации.
 \n\t• Архитектуру и дизайн.
 \n\t• Тест-кейсы и наборы тест-кейсов.
 \n\t• Технические спецификации, такие как схемы баз данных, описания алгоритмов, интерфейсов и т. д.
 \n\tПроектная документация включает в себя как продуктную документацию, так и некоторые дополнительные виды документации и используется не только на стадии разработки, но и на более ранних и поздних стадиях (например, на стадии внедрения и эксплуатации). Она включает:
    </string>
    <string name="temaTwoZagolovok2">Источники и пути выявления требований</string>
    <string name="tema2text3">\tТребования начинают свою жизнь на стороне заказчика. Их сбор и выявление осуществляются с помощью следующих основных техник.
    \n\tИнтервью. Самый универсальный путь выявления требований, заключающийся в общении проектного специалиста (как правило, специалиста по бизнес-анализу) и представителя заказчика (или эксперта, пользователя и т.д.).
    \n\tРабота с фокусными группами. Может выступать как вариант «расширенного интервью», где источником информации является не одно лицо, а группа лиц (как правило, представляющих собой целевую аудиторию, и/или обладающих важной для проекта информацией, и/или уполномоченных принимать важные для проекта решения).
    \n\tАнкетирование. Этот вариант выявления требований вызывает много споров, т. к. при неверной реализации может привести к нулевому результату при объёмных затратах.
    \n\tСеминары и мозговой штурм. Семинары позволяют группе людей очень быстро обменяться информацией (и наглядно продемонстрировать те или иные идеи).
   </string>
    <string name="temaTwoZagolovok3">Уровни и типы требований</string>
    <string name="test1quention1">\t1. Модель разработки ПО - это</string>
    <string name="temsExitToMenu">Вернуться в меню</string>
    <string name="textbutton">Подтвердить</string>
    <string name="test1quention2">\t4. Какую модель можно протестировать в любой момент времени</string>
    <string name="test2variant1">Водопадная</string>
    <string name="test2variant2">Гибкая</string>
    <string name="test2variant3">Спиральная</string>
    <string name="test2variant4">V-образная</string>
    <string name="test1quention3" >\t5. Какая модель является логическим развитием водопадной</string>
    <string name="test3variant1" >Гибкая</string>
    <string name="test3variant2" >Спиральная</string>
    <string name="test3variant3" >Итерационная инкрементальная</string>
    <string name="test3variant4" >V-образная</string>
    <string name="test1quention4">\t2. Какой модели свойственна определённая двойственность</string>
    <string name="test4variant1">V-образная</string>
    <string name="test4variant2">Спиральная</string>
    <string name="test4variant3">Итерационная инкрементальная</string>
    <string name="test4variant4">Водопадная</string>
    <string name="test1quention5">\t3. Какое количество повторений одних и тех же стадий имеет итерационная инкрементальная модель </string>
    <string name="test5variant1">Однократное</string>
    <string name="test5variant2">Двухкратное</string>
    <string name="test5variant3">Многократное</string>
    <string name="test5variant4">Не имеет повторений</string>
    <string name="exitToMenu8">Вернуться в меню</string>
</resources>