<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fon"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="800px"
            android:layout_height="800px"
            android:layout_gravity="center"
            android:layout_marginTop="150px"

            app:srcCompat="@drawable/zhuk" />

        <ImageView
            android:id="@+id/stesting"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"

            app:srcCompat="@drawable/stesting" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_in_bottom"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/btnSignIn" />

        <Button
            android:id="@+id/btnRegister"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/btnRegister" />


    </LinearLayout>


</RelativeLayout>